# GPT2

./: .gitignore  README.md  fineweb.py  fineweb_load.py  play.ipynb  pyproject.toml  requirements.txt  tokenized_fineweb.py  train_gpt2.py  train_gpt2_fsdp.py
log/: log.txt
runs/Aug04_17-31-48_ip-10-192-10-94/: events.out.tfevents.1754328708.ip-10-192-10-94.6122.0
runs/Aug04_17-32-29_ip-10-192-10-94/: events.out.tfevents.1754328749.ip-10-192-10-94.6360.0
