[project]
name = "gpt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface>=0.0.1",
    "matplotlib>=3.10.5",
    "tensorboard>=2.20.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
